--- a/cart.html
+++ b/cart.html
@@ -26,30 +26,13 @@
 				<section class="cart">
 					<header><h2>your bag</h2></header>
 					<div class="item-container">
-						<!-- <article class="cart-item">
-							<img src="https://dl.airtable.com/.attachments/64b266ad865098befbda3c3577a773c9/24497852/yedjpkwxljtb75t3tezl.png" alt="Samsung Galaxy S8"/>
-					    <div>
-					        <h4>Samsung Galaxy S8</h4>
-					        <h4 class="item-price">$399.99</h4>
-					        <button class="remove-btn">remove</button>
-					    </div>
-						<div>
-							<button class="amount-btn">
-								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10.707 7.05L10 6.343 4.343 12l1.414 1.414L10 9.172l4.243 4.242L15.657 12z"></path></svg>
-							</button>
-							<p class="amount">1</p>
-							<button class="amount-btn">
-								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"></path></svg>
-							</button>
-						</div>
-						</article> -->
 					</div>
 					<footer>
 						<hr />
 						<div class="cart-total">
 							<h4>total <span>$2199.96</span></h4>
 						</div>
-						<button class="btn clear-btn">clear cart</button>
+						<button onclick="clearCart()" class="btn clear-btn">clear cart</button>
 					</footer>
 				</section>
 			</main>
